<resources>
    <string name="app_name">SpendWise</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_btn">LOGIN</string>
    <string name="register">Register</string>
    <string name="register_btn">REGISTER</string>
    <string name="click_to_log_in">Click to log-in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="budget">Budget:</string>
    <string name="initial_price">0</string>
    <string name="expenses">Expenses:</string>
    <string name="set_budget">SET BUDGET</string>
    <string name="email_user">email-user</string>
    <string name="logout">LOGOUT</string>
    <string name="add_new_transaction">Add New Transaction</string>
    <string name="enter_transaction_name">Enter transaction name</string>
    <string name="enter_transaction_amount">Enter transaction amount</string>
    <string name="enter_transaction_date_day_month_year">Enter transaction date: day/month/year</string>
    <string name="save">Save</string>
    <string name="loading">Loading..</string>
    <string name="amount">Amount</string>
    <string name="click_to_register">Click to register</string>
</resources>