<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    android:background="@drawable/bg_app"
    tools:context=".RegisterActivity">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="@dimen/login_size"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/register_email"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        /><com.google.android.material.textfield.TextInputEditText
        android:id="@+id/register_password"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></com.google.android.material.textfield.TextInputEditText>
    
    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/register_progress_bar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_BTN_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_btn"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/register_login_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_to_log_in"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/cyan_A200"
        android:gravity="center"
        android:layout_marginTop="20dp"/>


</LinearLayout>