<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_app"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/main_FRAME_budget_manager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:id="@+id/main_budget_linerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/main_LBL_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budget"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"></com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/main_LBL_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_price"
            android:textStyle="italic|bold"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_expense_linerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="115dp"

        android:layout_marginLeft="10dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/main_LBL_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expenses"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"></com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/main_LBL_price_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_price"
            android:textStyle="italic|bold"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </LinearLayout>

</LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_BTN_setBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_budget"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:backgroundTint="#48A999"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="40dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_user_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_user"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_BTN_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="120dp"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/main_FAB_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="40dp"
        android:src="@drawable/baseline_add_24"
        android:backgroundTint="@color/lavender"
        app:tint="@color/white"/>

</RelativeLayout>