<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    android:background="@drawable/bg_app"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/logo2" />

    <LinearLayout
        android:id="@+id/login_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_below="@id/login_logo"
        android:orientation="vertical"
        android:padding="15dp">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/login_size"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login_email"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        ></com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login_password"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        ></com.google.android.material.textfield.TextInputEditText>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/login_progress_bar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_BTN_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_btn"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_register_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Click to register"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/cyan_A200"
        android:gravity="center"
        android:layout_marginTop="20dp"/>
    </LinearLayout>

</RelativeLayout>